--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,11 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_storage:
   font_awesome_flutter: ^8.7.0
-  image_picker: ^0.6.0+17
+  image_picker:
   cloud_firestore:
+  shared_preferences: ^0.5.6+3
+  modal_progress_hud: ^0.1.3
+  firebase_admob: ^0.9.3
   flutter_staggered_grid_view:
   transparent_image: ^0.1.0
 
